--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="beer_amber_light">#FFF6B44B</color>
+    <color name="beer_amber_dark">#FFDD8A00</color>
+    <color name="beer_foam">#FFFFF6DE</color>
 </resources>
